--- a/livraria-ejb-jboss/pom.xml
+++ b/livraria-ejb-jboss/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.luciano.exemplo</groupId>
 		<artifactId>livraria-in-tomcat</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 
 	<groupId>com.caelum.livraria</groupId>
@@ -19,34 +19,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- version compatible with Wildfly 10 -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.primefaces</groupId>
-			<artifactId>primefaces</artifactId>
-			<version>5.3</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.primefaces.themes</groupId>
-			<artifactId>all-themes</artifactId>
-			<version>1.0.10</version>
-		</dependency>
 	</dependencies>
-
-
-	<repositories>
-		<repository>
-			<id>prime-repo</id>
-			<name>PrimeFaces Maven Repository</name>
-			<url>http://repository.primefaces.org</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
-
 </project>
