--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ volumes:
     driver: local
 
 services:
-  db:
-    container_name: mariadb_livraria
+  mariadb5:
+    container_name: mariadb5_livraria
     image: mariadb:5.5.64
     restart: always
     volumes:
@@ -18,3 +18,16 @@ services:
       MYSQL_ROOT_PASSWORD: 123
     ports:
       - "3310:3306"
+  mariadb10:
+    container_name: mariadb10_livraria
+    image: mariadb:10.11.5
+    restart: always
+    volumes:
+      - ./lib2:/var/lib/mysql
+      - ./init:/docker-entrypoint-initdb.d
+    environment:
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 123
+      MYSQL_ROOT_PASSWORD: 123
+    ports:
+      - "3309:3306"
