--- a/pom.xml
+++ b/pom.xml
@@ -13,34 +13,42 @@
     <modules>
         <module>livraria-cdi</module>
         <module>livraria-spring</module>
-        <module>livraria-ejb-jboss</module>
+        <module>livraria-wildfly-10</module>
+        <module>livraria-wildfly-29</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <junit.version>4.13.2</junit.version>
+        <all-themes.version>1.0.10</all-themes.version>
+        <primefaces.version>10.0.0-RC2</primefaces.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- To upgrade below, switch use of font awesome in xhtml for primeicons. Source: https://primefaces.github.io/primefaces/11_0_0/#/../migrationguide/11_0_0 -->
-        <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>10.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
-            <version>1.0.10</version>
+            <version>${all-themes.version}</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.primefaces</groupId>
+                <artifactId>primefaces</artifactId>
+                <version>${primefaces.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <repositories>
         <repository>
